--- a/flock-example/Makefile.lambda
+++ b/flock-example/Makefile.lambda
@@ -2,6 +2,7 @@ build-%:
 	cp -r . "$(ARTIFACTS_DIR)"
 	"$(ARTIFACTS_DIR)/install.sh" "$(ARTIFACTS_DIR)"
 	@rm -rf "$(ARTIFACTS_DIR)/bin" \
+		"$(ARTIFACTS_DIR)/.FAILED" \
 		"$(ARTIFACTS_DIR)/.INSTALLED" \
 		"$(ARTIFACTS_DIR)/requirements.txt" \
 		"$(ARTIFACTS_DIR)/install.sh" \
